--- a/template.02/styles.css
+++ b/template.02/styles.css
@@ -9,26 +9,27 @@
     height: 100vh;
 }
 
-.left {
+.left, .right {
+    flex: 1;
     display: flex;
-    width: 50vw;
 }
 
 .right {
-    display: flex;
     flex-direction: column;
-    width: 50vw;
 }
 
-.bloco-1, .bloco-2, .bloco-3 {
-    display: flex;
+[class^="bloco-"] {
     flex: 1;
-    height: 100vh;
-    justify-content: center;
+    display: flex;
     align-items: center;
-    font-family: sans-serif;
+    justify-content: center;
     font-size: 24px;
     font-weight: 700;
+    font-family: sans-serif;
+}
+
+.bloco-4, .bloco-5, .bloco-6 {
+    color: #fff;
 }
 
 .bloco-1 {
@@ -41,20 +42,6 @@
 
 .bloco-3 {
     background-color:#FE6E88;
-}
-
-
-
-.bloco-4, .bloco-5, .bloco-6 {
-    display: flex;
-    width: 50vw;
-    flex: 1;
-    align-items: center;
-    color: #fff;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: 700;
-    font-family: sans-serif;
 }
 
 .bloco-4 {
