--- a/template.05/styles.css
+++ b/template.05/styles.css
@@ -27,23 +27,23 @@
 .content {
     flex: 1;
     width: 100%;
-    max-width: 1000px;
+    max-width: 500px;
     margin: 0 auto;
 }
 
 .content h1 {
-    margin: 20px 0 20px;
+    margin: 20px 0;
     font-family: sans-serif;
     font-size: 24px;
     font-weight: 700;
 }
 
 .content .container {
-    height: 70%;
-    background-color: #20b15a;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: calc(95vh - 268px);
+    background-color: #20b15a;
     font-size: 24px;
     font-family: sans-serif;
     font-weight: 700;
@@ -52,56 +52,3 @@
 .footer {
     background-color: #725BDA;
 }
-
-/*
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.main {
-    display: flex;
-    height: 100vh;
-    *flex-direction: column;
-}
-
-.header, .footer {
-    width: 100vw;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    font-family: sans-serif;
-    color: #fff;
-    font-weight: 700;
-}
-.header {
-    background-color: #4200FF;
-}
-
-.content {
-    display: flex;
-    flex: 1;
-    width: 100%;
-    max-width: 1000px;
-    background-color: white;
-    *margin: 0 auto;
-    *flex-direction: column;
-}
-
-.content .container {
-    background-color: #20b15a;
-    *height: 70%;
-}
-
-.content h1 {
-    *margin: 20px 0;
-}
-
-.footer {
-    background-color: #725BDA;
-} 
-*/
