--- a/template.06/styles.css
+++ b/template.06/styles.css
@@ -32,26 +32,23 @@
 }
 
 .content h1 {
-    margin: 20px 0 20px;
+    margin: 20px 0;
     font-family: sans-serif;
     font-size: 24px;
     font-weight: 700;
 }
 
-.content .container .blocos {
-    max-width: 1000px;
-    height: 50vh;
+.content .blocos {
     display: flex;
-    justify-content: space-between;
-    margin: 50px 0;
+    gap: 20px;
+    height: calc(95vh - 268px);
 }
 
 .bloco-1, .bloco-2 {
+    flex: 1;
     display: flex;
-    width: 49%;
-    justify-content: center;
     align-items: center;
-    font-family: sans-serif;
+    justify-content: center;
     font-size: 24px;
     font-family: sans-serif;
     font-weight: 700;
