--- a/template.07/styles.css
+++ b/template.07/styles.css
@@ -29,31 +29,40 @@
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
+    padding: 10px;
 }
 
 .content h1 {
-    margin: 20px 0 20px;
+    margin: 20px 0;
     font-family: sans-serif;
     font-size: 24px;
     font-weight: 700;
 }
 
-.content .container .row {
-    max-width: 1000px;
-    height: 50vh;
+.container {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    flex-wrap: wrap;
+    height: calc(95vh - 268px)
+}
+
+[class^="bloco-"] {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-family: sans-serif;
+    font-weight: 700;
 }
 
 .bloco-1, .bloco-2, .bloco-3 {
-    display: flex;
-    width: 49%;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-    font-size: 24px;
-    font-family: sans-serif;
-    font-weight: 700;
+    flex: 1;
+    height: 60%;
+}
+
+.bloco-4 {
+    width: 100%;
+    height: 37%;
 }
 
 .bloco-1 {
